--- a/style.scss
+++ b/style.scss
@@ -17,10 +17,32 @@ $very-dark-grayish-blue: hsl(237, 14%, 26%);
 
 body {
     font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: 35% auto;
+    grid-template-areas: 
+        "ha"
+        "hb";
+    height: 100vh;
+    position: relative;
+    justify-items: center;
+    // align-items: center;
 }
 
 .header-banner {
     grid-area: ha;
+    position: relative;
+}
+
+.todo-container {
+    // width: 50%;
+    // position: absolute;
+    display: flex;
+    flex-direction: column;
 }
 
 .header-banner img {
@@ -33,25 +55,12 @@ body {
     grid-area: hb;
     background: $very-dark-blue;
     position: relative;
-    display: grid;
-    align-items: center;
-    justify-items: center;
+    width: 100%;
 }
 
-.container {
-    display: grid;
-    grid-template-rows: 35% auto;
-    grid-template-areas: 
-        "ha"
-        "hb";
-    height: 100vh;
-}
-
-.todo-container {
-    width: 50%;
+.main-content {
     position: absolute;
-    display: flex;
-    flex-direction: column;
+    width: 40%;
 }
 
 .header-text {
