Positioned the check item in the text input.

--- a/style.scss
+++ b/style.scss
@@ -84,6 +84,7 @@ body {
 .todo-input {
     margin-top: 2rem;
     color: $very-dark-desaturated-blue;
+    position: relative;
 }
 
 .todo-input .current-item {
@@ -99,4 +100,10 @@ body {
 
 .todo-input .current-item:focus {
     outline: none;
+}
+
+.todo-input .check-todo {
+    position: absolute;
+    top: 10px;
+    left: 20px;
 }
