--- a/style.scss
+++ b/style.scss
@@ -131,9 +131,7 @@ input[type="radio"]{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // padding-left: 60px;
-    // padding-right: 60px;
-    width: 100%;
+    padding-right: 20px;
 }
 
 .text-component {
